--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+        integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Página inicial</title>
 </head>
+
 <body>
     <header>
         <div class="container">
@@ -13,40 +19,52 @@
                 <div class="flex-column">
                     <a href="#" class="logo">
                         <figure>
-                            <img src="" alt="Logo netflix">
+                            <img src="./assets/img/logo.svg" alt="Logo netflix">
                             <figcaption class="hidden">Logo netflix</figcaption>
                         </figure>
                     </a>
                 </div>
                 <div class="flex-column">
                     <nav>
-                        <span class="abrir-submenu mobile-element">Navegar</span>
-                        <ul>
-                            <li class="item-ativo"><a href="#">Início</a></li>
-                            <li><a href="#">Séries</a></li>
-                            <li><a href="#">Filmes</a></li>
-                            <li><a href="#">Bombando</a></li>
-                            <li><a href="#">Minha lista</a></li>
+                        <ul class="navegar">
+                            <li>
+                                <span class="abrir-submenu mobile-element">Navegar <i
+                                        class="fas fa-caret-down"></i></span>
+
+                                <ul class="navLista">
+
+                                    <li class="item-ativo"><a class="item-ativo" href="#">Início</a></li>
+                                    <li><a href="#">Séries</a></li>
+                                    <li><a href="#">Filmes</a></li>
+                                    <li><a href="#">Bombando</a></li>
+                                    <li><a href="#">Minha lista</a></li>
+                                </ul>
+
+                            </li>
+
                         </ul>
+
+
                     </nav>
                 </div>
                 <div class="flex-column">
                     <div class="menu-usuario">
-                        <span class="pesquisar"><img src="" alt="Ícone pesquisar"></span>
-                        <span class="usuario"><img src="" alt="Ícone usuário"></span>
+                        <span class="pesquisar"><i class="fas fa-search"></i></span>
+                        <span class="usuario"><img src="./assets/img/user.png" alt="Ícone usuário"></span>
                     </div>
                 </div>
             </div>
         </div>
     </header>
-    
+
     <main class="pagina-inicial">
         <section class="secao-destaque">
             <div class="container">
                 <article class="secao-destaque-conteudo">
                     <figure>
-                        <img src="" alt="Título seção destaque">
+                        <img src="/assets/img/movies/tedlogo.webp" alt="Título seção destaque">
                         <figcaption class="hidden">Título seção destaque</figcaption>
+                    
                     </figure>
                     <p>Ela o amava e queria acreditar nele. Mas a verdade era monstruosa demais para ser ignorada.</p>
                     <div class="secao-destaque-buttons">
@@ -63,7 +81,7 @@
                     <li class="flex-column">
                         <a href="#">
                             <figure>
-                                <img src="assets/img/movies/" alt="Nome programa">
+                                <img src="assets/img/movies/gg.jpg" alt="Nome programa">
                                 <figcaption class="hidden">Nome programa</figcaption>
                             </figure>
                         </a>
@@ -71,7 +89,7 @@
                     <li class="flex-column">
                         <a href="#">
                             <figure>
-                                <img src="assets/img/movies/" alt="Nome programa">
+                                <img src="assets/img/movies/amigas.jpg" alt="Nome programa">
                                 <figcaption class="hidden">Nome programa</figcaption>
                             </figure>
                         </a>
@@ -79,7 +97,7 @@
                     <li class="flex-column">
                         <a href="#">
                             <figure>
-                                <img src="assets/img/movies/" alt="Nome programa">
+                                <img src="assets/img/movies/papel.jpg" alt="Nome programa">
                                 <figcaption class="hidden">Nome programa</figcaption>
                             </figure>
                         </a>
@@ -87,7 +105,7 @@
                     <li class="flex-column">
                         <a href="#">
                             <figure>
-                                <img src="assets/img/movies/" alt="Nome programa">
+                                <img src="assets/img/movies/gg.jpg" alt="Nome programa">
                                 <figcaption class="hidden">Nome programa</figcaption>
                             </figure>
                         </a>
@@ -95,7 +113,7 @@
                     <li class="flex-column">
                         <a href="#">
                             <figure>
-                                <img src="assets/img/movies/" alt="Nome programa">
+                                <img src="assets/img/movies/amigas.jpg" alt="Nome programa">
                                 <figcaption class="hidden">Nome programa</figcaption>
                             </figure>
                         </a>
@@ -103,7 +121,7 @@
                     <li class="flex-column">
                         <a href="#">
                             <figure>
-                                <img src="assets/img/movies/" alt="Nome programa">
+                                <img src="assets/img/movies/papel.jpg" alt="Nome programa">
                                 <figcaption class="hidden">Nome programa</figcaption>
                             </figure>
                         </a>
@@ -118,7 +136,7 @@
                     <li class="flex-column">
                         <a href="#">
                             <figure>
-                                <img src="assets/img/movies/" alt="Nome programa">
+                                <img src="assets/img/movies/gg.jpg" alt="Nome programa">
                                 <figcaption class="hidden">Nome programa</figcaption>
                             </figure>
                         </a>
@@ -126,7 +144,7 @@
                     <li class="flex-column">
                         <a href="#">
                             <figure>
-                                <img src="assets/img/movies/" alt="Nome programa">
+                                <img src="assets/img/movies/papel.jpg" alt="Nome programa">
                                 <figcaption class="hidden">Nome programa</figcaption>
                             </figure>
                         </a>
@@ -134,7 +152,7 @@
                     <li class="flex-column">
                         <a href="#">
                             <figure>
-                                <img src="assets/img/movies/" alt="Nome programa">
+                                <img src="assets/img/movies/amigas.jpg" alt="Nome programa">
                                 <figcaption class="hidden">Nome programa</figcaption>
                             </figure>
                         </a>
@@ -142,7 +160,7 @@
                     <li class="flex-column">
                         <a href="#">
                             <figure>
-                                <img src="assets/img/movies/" alt="Nome programa">
+                                <img src="assets/img/movies/gg.jpg" alt="Nome programa">
                                 <figcaption class="hidden">Nome programa</figcaption>
                             </figure>
                         </a>
@@ -150,7 +168,7 @@
                     <li class="flex-column">
                         <a href="#">
                             <figure>
-                                <img src="assets/img/movies/" alt="Nome programa">
+                                <img src="assets/img/movies/papel.jpg" alt="Nome programa">
                                 <figcaption class="hidden">Nome programa</figcaption>
                             </figure>
                         </a>
@@ -158,7 +176,7 @@
                     <li class="flex-column">
                         <a href="#">
                             <figure>
-                                <img src="assets/img/movies/" alt="Nome programa">
+                                <img src="assets/img/movies/amigas.jpg" alt="Nome programa">
                                 <figcaption class="hidden">Nome programa</figcaption>
                             </figure>
                         </a>
@@ -168,12 +186,12 @@
         </section>
         <section class="secao-catalogo" id="secao-originais">
             <div class="container">
-                <h2 class="secao-catalogo-titulo">Minha lista</h2>
+                <h2 class="secao-catalogo-titulo">Originais Netflix</h2>
                 <ul class="flex">
                     <li class="flex-column">
                         <a href="#">
                             <figure>
-                                <img src="assets/img/movies/" alt="Nome programa">
+                                <img src="assets/img/movies/gg.jpg" alt="Nome programa">
                                 <figcaption class="hidden">Nome programa</figcaption>
                             </figure>
                         </a>
@@ -181,7 +199,7 @@
                     <li class="flex-column">
                         <a href="#">
                             <figure>
-                                <img src="assets/img/movies/" alt="Nome programa">
+                                <img src="assets/img/movies/papel.jpg" alt="Nome programa">
                                 <figcaption class="hidden">Nome programa</figcaption>
                             </figure>
                         </a>
@@ -189,7 +207,7 @@
                     <li class="flex-column">
                         <a href="#">
                             <figure>
-                                <img src="assets/img/movies/" alt="Nome programa">
+                                <img src="assets/img/movies/amigas.jpg" alt="Nome programa">
                                 <figcaption class="hidden">Nome programa</figcaption>
                             </figure>
                         </a>
@@ -197,7 +215,7 @@
                     <li class="flex-column">
                         <a href="#">
                             <figure>
-                                <img src="assets/img/movies/" alt="Nome programa">
+                                <img src="assets/img/movies/gg.jpg" alt="Nome programa">
                                 <figcaption class="hidden">Nome programa</figcaption>
                             </figure>
                         </a>
@@ -205,7 +223,7 @@
                     <li class="flex-column">
                         <a href="#">
                             <figure>
-                                <img src="assets/img/movies/" alt="Nome programa">
+                                <img src="assets/img/movies/papel.jpg" alt="Nome programa">
                                 <figcaption class="hidden">Nome programa</figcaption>
                             </figure>
                         </a>
@@ -213,7 +231,7 @@
                     <li class="flex-column">
                         <a href="#">
                             <figure>
-                                <img src="assets/img/movies/" alt="Nome programa">
+                                <img src="assets/img/movies/amigas.jpg" alt="Nome programa">
                                 <figcaption class="hidden">Nome programa</figcaption>
                             </figure>
                         </a>
@@ -221,14 +239,69 @@
                 </ul>
             </div>
         </section>
-        <section class="secao-catalogo" id="secao-originais">
+        <section class="secao-catalogo" id="secao-originais-grandes">
+            <div class="container">
+                <h2 class="secao-catalogo-titulo">Originais Netflix</h2>
+                <ul class="flex">
+                    <li class="flex-column">
+                        <a href="#">
+                            <figure>
+                                <img src="/assets/img/movies/good.webp" alt="Nome programa">
+                                <figcaption class="hidden">Nome programa</figcaption>
+                            </figure>
+                        </a>
+                    </li>
+                    <li class="flex-column">
+                        <a href="#">
+                            <figure>
+                                <img src="/assets/img/movies/papel2.webp" alt="Nome programa">
+                                <figcaption class="hidden">Nome programa</figcaption>
+                            </figure>
+                        </a>
+                    </li>
+                    <li class="flex-column">
+                        <a href="#">
+                            <figure>
+                                <img src="/assets/img/movies/good.webp" alt="Nome programa">
+                                <figcaption class="hidden">Nome programa</figcaption>
+                            </figure>
+                        </a>
+                    </li>
+                    <li class="flex-column">
+                        <a href="#">
+                            <figure>
+                                <img src="/assets/img/movies/good.webp" alt="Nome programa">
+                                <figcaption class="hidden">Nome programa</figcaption>
+                            </figure>
+                        </a>
+                    </li>
+                    <li class="flex-column">
+                        <a href="#">
+                            <figure>
+                                <img src="/assets/img/movies/papel2.webp" alt="Nome programa">
+                                <figcaption class="hidden">Nome programa</figcaption>
+                            </figure>
+                        </a>
+                    </li>
+                    <li class="flex-column">
+                        <a href="#">
+                            <figure>
+                                <img src="/assets/img/movies/good.webp" alt="Nome programa">
+                                <figcaption class="hidden">Nome programa</figcaption>
+                            </figure>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <section class="secao-catalogo" id="secao-programas-para-familia">
             <div class="container">
                 <h2 class="secao-catalogo-titulo">Programas para toda a família</h2>
                 <ul class="flex">
                     <li class="flex-column">
                         <a href="#">
                             <figure>
-                                <img src="assets/img/movies/" alt="Nome programa">
+                                <img src="assets/img/movies/gg.jpg" alt="Nome programa">
                                 <figcaption class="hidden">Nome programa</figcaption>
                             </figure>
                         </a>
@@ -236,7 +309,7 @@
                     <li class="flex-column">
                         <a href="#">
                             <figure>
-                                <img src="assets/img/movies/" alt="Nome programa">
+                                <img src="assets/img/movies/papel.jpg" alt="Nome programa">
                                 <figcaption class="hidden">Nome programa</figcaption>
                             </figure>
                         </a>
@@ -244,7 +317,7 @@
                     <li class="flex-column">
                         <a href="#">
                             <figure>
-                                <img src="assets/img/movies/" alt="Nome programa">
+                                <img src="assets/img/movies/amigas.jpg" alt="Nome programa">
                                 <figcaption class="hidden">Nome programa</figcaption>
                             </figure>
                         </a>
@@ -252,7 +325,7 @@
                     <li class="flex-column">
                         <a href="#">
                             <figure>
-                                <img src="assets/img/movies/" alt="Nome programa">
+                                <img src="assets/img/movies/gg.jpg" alt="Nome programa">
                                 <figcaption class="hidden">Nome programa</figcaption>
                             </figure>
                         </a>
@@ -260,7 +333,7 @@
                     <li class="flex-column">
                         <a href="#">
                             <figure>
-                                <img src="assets/img/movies/" alt="Nome programa">
+                                <img src="assets/img/movies/papel.jpg" alt="Nome programa">
                                 <figcaption class="hidden">Nome programa</figcaption>
                             </figure>
                         </a>
@@ -268,7 +341,7 @@
                     <li class="flex-column">
                         <a href="#">
                             <figure>
-                                <img src="assets/img/movies/" alt="Nome programa">
+                                <img src="assets/img/movies/amigas.jpg" alt="Nome programa">
                                 <figcaption class="hidden">Nome programa</figcaption>
                             </figure>
                         </a>
@@ -293,9 +366,9 @@
                 </div>
                 <div class="flex-column">
                     <ul class="redes-sociais">
-                        <li><a href="#"><img src="" alt="Facebook"></a></li>
-                        <li><a href="#"><img src="" alt="Instagram"></a></li>
-                        <li><a href="#"><img src="" alt="Twitter"></a></li>
+                        <li><a href="#"><img src="" alt="Facebook"></a><i class="fab fa-facebook-square"></i></li>
+                        <li><a href="#"><img src="" alt="Instagram"></a><i class="fab fa-instagram"></i></li>
+                        <li><a href="#"><img src="" alt="Twitter"></a><i class="fab fa-twitter"></i></li>
                     </ul>
                 </div>
             </div>
@@ -305,4 +378,6 @@
         </div>
     </footer>
 </body>
+<script src="./assets/js/script.js"></script>
+
 </html>
