--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div class="container">
                 <article class="secao-destaque-conteudo">
                     <figure>
-                        <img src="/assets/img/movies/tedlogo.webp" alt="Título seção destaque">
+                        <img src="assets/img/movies/tedlogo.webp" alt="Título seção destaque">
                         <figcaption class="hidden">Título seção destaque</figcaption>
                     
                     </figure>
@@ -246,7 +246,7 @@
                     <li class="flex-column">
                         <a href="#">
                             <figure>
-                                <img src="/assets/img/movies/good.webp" alt="Nome programa">
+                                <img src="assets/img/movies/good.webp" alt="Nome programa">
                                 <figcaption class="hidden">Nome programa</figcaption>
                             </figure>
                         </a>
@@ -254,7 +254,7 @@
                     <li class="flex-column">
                         <a href="#">
                             <figure>
-                                <img src="/assets/img/movies/papel2.webp" alt="Nome programa">
+                                <img src="assets/img/movies/papel2.webp" alt="Nome programa">
                                 <figcaption class="hidden">Nome programa</figcaption>
                             </figure>
                         </a>
@@ -262,7 +262,7 @@
                     <li class="flex-column">
                         <a href="#">
                             <figure>
-                                <img src="/assets/img/movies/good.webp" alt="Nome programa">
+                                <img src="assets/img/movies/good.webp" alt="Nome programa">
                                 <figcaption class="hidden">Nome programa</figcaption>
                             </figure>
                         </a>
@@ -270,7 +270,7 @@
                     <li class="flex-column">
                         <a href="#">
                             <figure>
-                                <img src="/assets/img/movies/good.webp" alt="Nome programa">
+                                <img src="assets/img/movies/good.webp" alt="Nome programa">
                                 <figcaption class="hidden">Nome programa</figcaption>
                             </figure>
                         </a>
@@ -278,7 +278,7 @@
                     <li class="flex-column">
                         <a href="#">
                             <figure>
-                                <img src="/assets/img/movies/papel2.webp" alt="Nome programa">
+                                <img src="assets/img/movies/papel2.webp" alt="Nome programa">
                                 <figcaption class="hidden">Nome programa</figcaption>
                             </figure>
                         </a>
@@ -286,7 +286,7 @@
                     <li class="flex-column">
                         <a href="#">
                             <figure>
-                                <img src="/assets/img/movies/good.webp" alt="Nome programa">
+                                <img src="assets/img/movies/good.webp" alt="Nome programa">
                                 <figcaption class="hidden">Nome programa</figcaption>
                             </figure>
                         </a>
