--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                     <li class="flex-column">
                         <a href="#">
                             <figure>
-                                <img src="/assets/img/movies/good.webp" alt="Nome programa">
+                                <img src="assets/img/movies/good.webp" alt="Nome programa">
                                 <figcaption class="hidden">Nome programa</figcaption>
                             </figure>
                         </a>
